# pytask-r

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.conda/: meta.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: continuous-integration-workflow.yml  main.yml  publish-to-pypi.yml
src/pytask_r/: __init__.py  _version.py  collect.py  config.py  execute.py  parametrize.py  plugin.py  serialization.py  shared.py
tests/: conftest.py  test_collect.py  test_config.py  test_execute.py  test_normal_execution_w_plugin.py  test_parallel.py  test_parametrize.py
