[project]
name = "pytask_r"
description = "Run R scripts with pytask."
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: R",
]
requires-python = ">=3.8"
dependencies = ["click", "pluggy>=1.0.0", "pytask>=0.4.5"]
dynamic = ["version"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pytask-dev/pytask-r"
Changelog = "https://github.com/pytask-dev/pytask-r/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/pytask-r"
Github = "https://github.com/pytask-dev/pytask-r"
Tracker = "https://github.com/pytask-dev/pytask-r/issues"

[project.entry-points.pytask]
pytask_r = "pytask_r.plugin"

[project.optional-dependencies]
test = ["pytask-parallel", "pytest", "pytest-cov", "pytest-xdist", "pyyaml"]

[tool.rye]
managed = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytask_r/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "ANN101", # type annotating self
    "ANN102", # type annotating cls
    "ANN401",
    "COM812", # Comply with ruff-format
    "ISC001", # Comply with ruff-format
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea", ".tox"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pytask_r = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.dependencies]
r-base = ">=4.0.0"
r-jsonlite = "*"
r-yaml = "*"

[tool.pixi.feature.test.tasks]
test = "pytest --cov src --cov tests"
