[project]
name = "pytask_r"
description = "Run R scripts with pytask."
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: R",
]
requires-python = ">=3.10"
dependencies = ["click", "pluggy>=1.0.0", "pytask>=0.4.5"]
dynamic = ["version"]

[[project.authors]]
name = "Tobias Raabe"
email = "raabe@posteo.de"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pytask-dev/pytask-r"
Changelog = "https://github.com/pytask-dev/pytask-r/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/pytask-r"
Github = "https://github.com/pytask-dev/pytask-r"
Tracker = "https://github.com/pytask-dev/pytask-r/issues"

[project.entry-points.pytask]
pytask_r = "pytask_r.plugin"

[dependency-groups]
test = ["pytask-parallel", "pytest", "pytest-cov", "pytest-xdist", "pyyaml"]
typing = ["ty>=0.0.8"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytask_r/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "ANN401",
    "COM812", # Comply with ruff-format
    "ISC001", # Comply with ruff-format
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = ["src/**/_version.py"]

[tool.ty.overrides.rules]
invalid-type-form = "ignore"

[[tool.ty.overrides]]
include = ["src/**/__init__.py"]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
]
norecursedirs = [".idea", ".tox"]
