[metadata]
name = pytask_r
description = Run R scripts with pytask.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytask-dev/pytask-r
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: R
project_urls =
    Changelog = https://github.com/pytask-dev/pytask-r/blob/main/CHANGES.rst
    Documentation = https://github.com/pytask-dev/pytask-r
    Github = https://github.com/pytask-dev/pytask-r
    Tracker = https://github.com/pytask-dev/pytask-r/issues

[options]
packages = find:
install_requires =
    click
    pytask>=0.1.7
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_r = pytask_r.plugin

[check-manifest]
ignore =
    src/pytask_r/_version.py
