[metadata]
name = pytask_r
description = Run R scripts with pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytask-dev/pytask-r
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: R
project_urls =
    Changelog = https://github.com/pytask-dev/pytask-r/blob/main/CHANGES.md
    Documentation = https://github.com/pytask-dev/pytask-r
    Github = https://github.com/pytask-dev/pytask-r
    Tracker = https://github.com/pytask-dev/pytask-r/issues

[options]
packages = find:
install_requires =
    click
    pluggy>=1.0.0
    pytask>=0.4.0rc4
python_requires = >=3.8
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_r = pytask_r.plugin

[check-manifest]
ignore =
    src/pytask_r/_version.py
